CPL/Tema3/tema3-tests/strlit.lcpl.err
llc: strlit.lcpl.ir:80:24: error: use of undefined value '@_string_constant.null'
store %struct.TString* @_string_constant.null, %struct.TString** %5
                       ^
clang: error: no such file or directory: 'strlit.lcpl.ir.s'
./eval.sh: line 27: ./strlit: No such file or directory
rm: cannot remove `strlit': No such file or directory
